--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/mdb.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="scss/_custom-styles.css">
+  <link rel="stylesheet" href="scss/custom-styles.css">
 </head>
 
 <body>
