--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
   <script type="text/javascript" src="js/popper.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/mdb.min.js"></script>
-  <script src="./node_modules/axios/dist/axios.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="./js/heat.js"></script>
   <script src='js/script.js'></script>
 </body>
