--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="page-align mx-auto d-flex flex-column">
+  <div class="page-align mx-auto d-flex flex-column heatmapContainer">
     
     <img class="logo mx-auto" src="img/page-img/logo.jpg">
 
